--- a/lib/base.css
+++ b/lib/base.css
@@ -43,16 +43,7 @@ button {
   background: transparent;
   border: 0;
   padding: 0;
-}
-
-/**
- * Work around a Firefox/IE bug where the transparent `button` background
- * results in a loss of the default `button` focus styles.
- */
-
-button:focus {
-  outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color;
+  outline: none;
 }
 
 fieldset {
